        SS   tt   eeeeee  ll   ll   aaaaa  --  "An Atari 2600 VCS Emulator"
    SS  SS   tt   ee      ll   ll  aa  aa
     SSSS     ttt  eeeee llll llll  aaaaa

===========================================================================
                               Release History
===========================================================================

3.9.1 to 3.9.2: (August xx, 2013)

  * Added ability to use bold fonts within the debugger window, which can
    be set with the 'dbg.boldfont' commandline argument as well as in the
    debugger UI Settings dialog.  This is useful for those that find the
    current font too narrow.

  * Renamed 'debuggerres' argument to 'dbg.res'.  All future debugger-
    specific options will start with 'dbg.'.

-Have fun!


3.9 to 3.9.1: (August 21, 2013)

  * Note: because of TIA/6502 changes, the state file format has changed
          again, and old state files will not work with this release.

  * Several bugfixes and improvements to the debugger:
      - Improved display of debugger when using larger video modes.  There
        are now three font sizes, which are automatically selected when
        the debugger is sized accordingly.  When using larger fonts, the
        extra space is now used more efficiently.

      - Fixed bug in disassembly when the mirror used for the current
        PC didn't match the mirror for the current bank.  In this case,
        the disassembler became confused and didn't properly track the
        PC address.

      - Fixed bug in display of current TIA frame number in the UI;
        depending on how breakpoints were set, it was sometimes off by
        one.

      - Fixed RAM widget Search/Compare textboxes; entering any data and
        then pressing 'Enter' / clicking 'OK' locked the UI until exiting
        and re-entering the debugger.

      - Changed display for various TIA position counters to decimal
        (from hex) in the TIA tab.  Related to this, all data input