@@ -88,7 +88,7 @@ Settings::Settings(OSystem* osystem)
   setInternal("combomap", "");
   setInternal("joydeadzone", "13");
   setInternal("joyallow4", "false");
-  setInternal("usemouse", "true");
+  setInternal("usemouse", "analog");
   setInternal("dsense", "5");
   setInternal("msense", "7");
   setInternal("saport", "lr");
@@ -397,7 +397,9 @@ void Settings::usage()
     << "  -logtoconsole <1|0>          Log output to console/commandline\n"
     << "  -joydeadzone  <number>       Sets 'deadzone' area for analog joysticks (0-29)\n"
     << "  -joyallow4    <1|0>          Allow all 4 directions on a joystick to be pressed simultaneously\n"
-    << "  -usemouse     <1|0>          Use mouse as a controller as specified by ROM properties (see manual)\n"
+    << "  -usemouse     <always|\n"
+    << "                 analog|\n"
+    << "                 never>        Use mouse as a controller as specified by ROM properties in given mode(see manual)\n"
     << "  -dsense       <number>       Sensitivity of digital emulated paddle movement (1-10)\n"
     << "  -msense       <number>       Sensitivity of mouse emulated paddle movement (1-15)\n"
     << "  -saport       <lr|rl>        How to assign virtual ports to multiple Stelladaptor/2600-daptors\n"
